[gd_scene load_steps=37 format=2]

[ext_resource path="res://assets/SKELELORDslamsheet.png" type="Texture" id=1]
[ext_resource path="res://assets/SKELELORDidlesheet.png" type="Texture" id=2]
[ext_resource path="res://assets/SKELELORDhitsheet.png" type="Texture" id=3]
[ext_resource path="res://assets/SKELELORDswipesheet.png" type="Texture" id=4]
[ext_resource path="res://scenes/boss.gd" type="Script" id=5]
[ext_resource path="res://scenes/PlayerDetectionZone.gd" type="Script" id=6]
[ext_resource path="res://assets/pupil.png" type="Texture" id=7]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 588, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 588, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 1176, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 1764, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 588, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 1176, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 1764, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 2352, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 2940, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 3528, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 4116, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 588, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 1176, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 1764, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 2352, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 2940, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 3528, 0, 588, 425 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 4116, 0, 588, 425 )

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 3 ) ],
"loop": false,
"name": "hit",
"speed": 8.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "idle",
"speed": 4.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": false,
"name": "slam",
"speed": 8.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": false,
"name": "swipe",
"speed": 8.0
} ]

[sub_resource type="RectangleShape2D" id=24]
extents = Vector2( 278.462, 58.0769 )

[sub_resource type="CapsuleShape2D" id=25]
radius = 91.5385
height = 63.077

[sub_resource type="CircleShape2D" id=30]
radius = 196.883

[sub_resource type="CircleShape2D" id=29]
radius = 83.8497

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 265.385, 28.4615 )

[sub_resource type="CapsuleShape2D" id=28]
radius = 70.0
height = 115.385

[node name="boss" type="KinematicBody2D"]
scale = Vector2( 1.3, 1.3 )
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "idle"
frame = 2
playing = true

[node name="pupil" type="Sprite" parent="."]
position = Vector2( 48, -16 )
texture = ExtResource( 7 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( 14.6154, -50.3846 )
shape = SubResource( 24 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 36.1539, -73.0769 )
shape = SubResource( 25 )

[node name="PlayerDetectionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64
script = ExtResource( 6 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="PlayerDetectionZone"]
position = Vector2( 39.2308, 56.1539 )
shape = SubResource( 30 )

[node name="actionTimer" type="Timer" parent="."]

[node name="meteorTimer" type="Timer" parent="."]
wait_time = 0.4

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 512
collision_mask = 0

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 36.1539, -10 )
shape = SubResource( 29 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 22.3077, 8.46154 )
shape = SubResource( 27 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -185.385, 36.9231 )
shape = SubResource( 28 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_PlayerDetectionZone_body_entered"]
[connection signal="timeout" from="actionTimer" to="." method="_on_actionTimer_timeout"]
[connection signal="timeout" from="meteorTimer" to="." method="_on_meteorTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
